[package]
name = "traitcast"
version = "0.1.0"
authors = ["Bradley Hardy <bradleyhardy29@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Downcast from Any to trait objects"
repository = "https://github.com/bhc29/traitcast"

[dependencies]
inventory = "0.1.*"
lazy_static = "1.*"
anymap = "0.12.*"
