[package]
name = "traitcast"
version = "0.1.3"
authors = ["Bradley Hardy <bradleyhardy29@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Downcast from Any to trait objects"
repository = "https://github.com/bch29/traitcast"

[dependencies]
inventory = "0.1.*"
lazy_static = "1.*"
anymap = "0.12.*"
