[package]
name = "traitcast_core"
version = "0.2.0"
authors = ["Bradley Hardy <bradleyhardy29@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Cast between dynamic trait objects."
repository = "https://github.com/bch29/traitcast"

[dependencies]
anymap = "0.12.*"
inventory = { version = "0.1.*", optional = true }

[dev-dependencies]
inventory = "0.1.*"

[features]
use_inventory = ["inventory"]
