[package]
name = "traitcast"
version = "0.4.0"
authors = ["Bradley Hardy <bradleyhardy29@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Cast between dynamic trait objects."
repository = "https://github.com/bch29/traitcast"

[dependencies]
lazy_static = "1.*"
inventory = "0.1.*"

[dependencies.traitcast_core]
version = "0.1.*"
path = "../core"
features = ["use_inventory"]
